[BUG #5891 + #5890] Fixed jumping dialogs in iOS + dialogs are not shown in chrome

--- a/framework/source/resource/qx/mobile/css/android/android.css
+++ b/framework/source/resource/qx/mobile/css/android/android.css
@@ -253,7 +253,6 @@ input[type="checkbox"], input[type="radio"] {
 }
 
 .toggleButton > div {
-    -webkit-tap-highlight-color: rgba(0,0,0,0);
     margin: 0;
     -webkit-border-radius: 5px;
     background: #fff url(../../icon/android/on_off.png) 0 0 no-repeat;
