--- a/framework/source/resource/qx/mobile/css/ios/ios.css
+++ b/framework/source/resource/qx/mobile/css/ios/ios.css
@@ -228,7 +228,6 @@ input[type="checkbox"], input[type="radio"] {
 }
 
 .toggleButton > div {
-    -webkit-tap-highlight-color: rgba(0,0,0,0);
     margin: 0;
     -webkit-border-radius: 5px;
     background: #fff url(../../icon/ios/on_off.png) 0 0 no-repeat;
